--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon lib/server/index.js",
+    "dev": "babel --watch server -d lib/server",
+    "build": "babel server -d lib/server",
+    "test": "NODE_ENV=test mocha lib/server/test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -19,19 +21,26 @@
   },
   "homepage": "https://github.com/andela-angene/document-management-system#readme",
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.1",
     "eslint": "^3.19.0",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "mocha": "^3.3.0",
     "nodemon": "1.10.2"
   }
 }
