--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon lib/server/index.js",
+    "start": "NODE_ENV=development nodemon lib/server/index.js",
     "dev": "babel --watch server -d lib/server",
     "build": "babel server -d lib/server",
-    "test": "NODE_ENV=test mocha lib/server/test/**/*.js"
+    "test": "NODE_ENV=test mocha lib/server/test/**/*.js",
+    "db:migrate": "sequelize db:migrate"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
