--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  "config": path.resolve('./config', 'config.js'),
+  "config": path.resolve('./server/config', 'config.js'),
   "models-path": path.resolve('./server/models'),
   "seeders-path": path.resolve('./seeders'),
   "migrations-path": path.resolve('./migrations')
