--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "rm -rf lib/ && babel server -d lib/server",
     "test": "NODE_ENV=test istanbul cover _mocha --timeout 10000 lib/server/test/**/*.js",
     "db:migrate": "sequelize db:migrate:undo:all && sequelize db:migrate",
+    "db:seed": "sequelize db:seed:all",
     "db:migrate:test": "NODE_ENV=test sequelize db:migrate:undo:all && NODE_ENV=test sequelize db:migrate",
-    "postinstall": "npm run build && npm run db:migrate"
+    "setup:test": "npm run db:migrate:test && NODE_ENV=test sequelize db:seed:all",
+    "postinstall": "npm run build && npm run db:migrate && npm run db:seed"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
