--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "express": "^4.15.2",
+    "jsonwebtoken": "^7.4.0",
     "morgan": "^1.8.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
