--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,7 @@
   "env": {
   "node": true,
   "es6": true,
-  "jquery": true,
-  "jasmine": true,
+  "mocha": true,
   "browser": true
   },
   "globals": {
