--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node lib/server/index.js",
-    "dev": "NODE_ENV=development nodemon lib/server/index.js",
+    "start:dev": "NODE_ENV=development nodemon lib/server/index.js",
+    "dev": "npm-run-all --parallel build:watch start:dev",
     "build:watch": "babel --watch server -d lib/server",
     "build": "rm -rf lib/ && babel server -d lib/server",
     "test": "NODE_ENV=test istanbul cover _mocha --timeout 10000 lib/server/test/**/*.js",
@@ -53,6 +54,7 @@
     "eslint-plugin-react": "^6.10.3",
     "istanbul": "^0.4.5",
     "mocha": "^3.3.0",
-    "nodemon": "1.10.2"
+    "nodemon": "1.10.2",
+    "npm-run-all": "^4.0.2"
   }
 }
