--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,21 @@
 {
   "root": true,
-  "extends": "airbnb-base",
+  "extends": "airbnb",
   "env": {
-  "node": true,
-  "es6": true,
-  "mocha": true
+    "node": true,
+    "es6": true,
+    "mocha": true,
+    "browser": true,
+    "jquery": true
   },
-   "rules": {
-    "max-len":[2, 80, 2],
+  "rules": {
     "one-var": 0,
     "one-var-declaration-per-line": 0,
-    "no-unused-vars": 0,
     "new-cap": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
     "curly": ["error", "multi-line"],
-    "import/no-unresolved": 0,
-    "import/extensions": 0,
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
     "valid-jsdoc": ["error", {
       "requireReturn": true,
@@ -25,17 +23,46 @@
       "requireParamDescription": false,
       "requireReturnDescription": true
     }],
-    "require-jsdoc": ["error", {
-        "require": {
-            "FunctionDeclaration": true,
-            "MethodDefinition": true,
-            "ClassDeclaration": true
-        }
-    }]
-  },
-  "plugins": [
-      "react",
-      "jsx-a11y",
-      "import"
-  ]
+    "require-jsdoc": 0,
+    "import/no-dynamic-require": 0,
+    "no-unused-vars": 0,
+    "import/no-unresolved": 0,
+    "no-unused-expressions": 0,
+    "jsx-quotes": 1,
+    "react/display-name": [ 1, {"ignoreTranspilerName": false }],
+    "react/forbid-prop-types": [1, {"forbid": ["any"]}],
+    "react/jsx-boolean-value": 1,
+    "react/jsx-closing-bracket-location": 0,
+    "react/jsx-curly-spacing": 1,
+    "react/jsx-indent-props": 0,
+    "react/jsx-key": 1,
+    "react/jsx-max-props-per-line": 0,
+    "react/jsx-no-bind": 0,
+    "react/jsx-no-duplicate-props": 1,
+    "react/jsx-no-literals": 0,
+    "react/jsx-no-undef": 1,
+    "react/jsx-pascal-case": 1,
+    "react/jsx-sort-prop-types": 0,
+    "react/jsx-sort-props": 0,
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+    "react/no-danger": 1,
+    "react/no-did-mount-set-state": 1,
+    "react/no-did-update-set-state": 1,
+    "react/no-direct-mutation-state": 1,
+    "react/no-multi-comp": 1,
+    "react/no-set-state": 0,
+    "react/no-unknown-property": 1,
+    "react/prefer-es6-class": 1,
+    "react/prop-types": 1,
+    "react/react-in-jsx-scope": 1,
+    "react/require-extension": 1,
+    "react/self-closing-comp": 1,
+    "react/sort-comp": 0,
+    "react/wrap-multilines": 1,
+    "react/prefer-stateless-function": 0,
+    "react/jsx-filename-extension": 0,
+    "arrow-body-style": 0,
+    "react/require-default-props": 0
+  }
 }
