--- a/package.json
+++ b/package.json
@@ -29,18 +29,29 @@
   },
   "homepage": "https://github.com/andela-angene/document-management-system#readme",
   "dependencies": {
+    "axios": "^0.16.1",
     "babel-cli": "^6.24.1",
+    "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
+    "compression": "1.6.1",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "express": "^4.15.2",
     "faker": "^4.1.0",
+    "jquery": "2.2.3",
     "jsonwebtoken": "^7.4.0",
     "morgan": "^1.8.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
+    "react-redux": "4.4.5",
+    "react-router": "2.4.0",
+    "react-router-redux": "4.0.4",
+    "redux": "3.5.2",
+    "redux-thunk": "2.0.1",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0"
   },
@@ -56,6 +67,30 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.3.0",
     "nodemon": "1.10.2",
-    "npm-run-all": "^4.0.2"
+    "npm-run-all": "^4.0.2",
+    "babel-cli": "6.8.0",
+    "babel-core": "6.8.0",
+    "babel-loader": "6.2.4",
+    "babel-plugin-react-display-name": "2.0.0",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-register": "6.8.0",
+    "cheerio": "0.22.0",
+    "cross-env": "1.0.7",
+    "css-loader": "0.23.1",
+    "enzyme": "2.2.0",
+    "eventsource-polyfill": "0.9.6",
+    "expect": "1.19.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "jsdom": "8.5.0",
+    "react-addons-test-utils": "15.0.2",
+    "redux-mock-store": "1.0.2",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.0",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-hot-middleware": "2.10.0"
   }
 }
