--- a/package.json
+++ b/package.json
@@ -56,18 +56,7 @@
     "sequelize-cli": "^2.7.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "coveralls": "^2.13.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.3.0",
-    "nodemon": "1.10.2",
-    "npm-run-all": "^4.0.2",
+    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
@@ -76,17 +65,31 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.8.0",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "cheerio": "0.22.0",
+    "coveralls": "^2.13.1",
     "cross-env": "1.0.7",
     "css-loader": "0.23.1",
     "enzyme": "2.2.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "eventsource-polyfill": "0.9.6",
     "expect": "1.19.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
+    "istanbul": "^0.4.5",
     "jsdom": "8.5.0",
+    "mocha": "^3.3.0",
+    "node-sass": "^4.5.2",
+    "nodemon": "1.10.2",
+    "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "15.0.2",
     "redux-mock-store": "1.0.2",
+    "sass-loader": "^6.0.5",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
