chore(frontend): remove static front-end design files
[#145029929]

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,9 +1,9 @@
-node_modules
-lib
+/node_modules/*
+lib/*
 seeders/*
-server/test
-client/static-frontend
+server/test/*
+client/static-frontend/*
 webpack.config.dev.js
 webpack.config.prod.js
 server/index.js
-client/scss
+**/*.scss
