--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "npm-run-all --parallel build:watch start:dev",
     "build:watch": "babel --watch server -d lib/server",
     "build": "rm -rf lib/ && babel server -d lib/server && npm run build:client",
+    "build:server": "rm -rf lib/ && babel server -d lib/server",
     "test": "NODE_ENV=test istanbul cover _mocha --timeout 10000 lib/server/test/**/*.js",
     "db:migrate": "sequelize db:migrate:undo:all && sequelize db:migrate",
     "db:seed": "sequelize db:seed:all",
@@ -40,6 +41,7 @@
     "eslint": "^3.19.0",
     "express": "^4.15.2",
     "faker": "^4.1.0",
+    "html-truncate": "^1.2.2",
     "jquery": "2.2.3",
     "jsonwebtoken": "^7.4.0",
     "morgan": "^1.8.1",
@@ -48,12 +50,15 @@
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
+    "react-render-html": "^0.1.6",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
+    "react-tinymce": "^0.5.1",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
     "sequelize": "^3.30.4",
-    "sequelize-cli": "^2.7.0"
+    "sequelize-cli": "^2.7.0",
+    "validator": "^7.0.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
@@ -83,11 +88,13 @@
     "file-loader": "0.8.5",
     "istanbul": "^0.4.5",
     "jsdom": "8.5.0",
+    "json-loader": "^0.5.4",
     "mocha": "^3.3.0",
     "node-sass": "^4.5.2",
     "nodemon": "1.10.2",
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "15.0.2",
+    "redux-immutable-state-invariant": "^2.0.0",
     "redux-mock-store": "1.0.2",
     "sass-loader": "^6.0.5",
     "style-loader": "0.13.1",
