chore(client): add document management features to the client side
[#145404165]

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,8 +30,8 @@
     "import/no-dynamic-require": 0,
     "import/no-unresolved": 0,
     "no-script-url": 0,
-    // "no-unused-expressions": 0,
     "jsx-quotes": 1,
+    "jsx-a11y/label-has-for": 0,
     "react/display-name": [ 1, {"ignoreTranspilerName": false }],
     "react/forbid-prop-types": [1, {"forbid": ["any"]}],
     "react/jsx-boolean-value": 1,
