--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "jsdom": "8.5.0",
     "json-loader": "^0.5.4",
     "mocha": "^3.3.0",
+    "nock": "8.0.0",
     "node-sass": "^4.5.2",
     "nodemon": "1.10.2",
     "npm-run-all": "^4.0.2",
