--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "NODE_ENV=development nodemon --watch lib/server lib/server/index.js",
     "dev": "npm-run-all --parallel build:watch start:dev",
     "build:watch": "babel --watch server -d lib/server",
-    "build": "rm -rf lib/ && babel server -d lib/server && npm run build:client",
+    "build": "babel server -d lib/server && npm run build:client",
     "build:server": "rm -rf lib/ && babel server -d lib/server",
     "test": "NODE_ENV=test istanbul cover _mocha --timeout 10000 lib/server/test/**/*.js",
     "db:migrate": "sequelize db:migrate:undo:all && sequelize db:migrate",
