--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,12 +1,4 @@
 engines:
-  eslint:
-    enabled: true
-    channel: "eslint-3"
-    config:
-      config: .eslintrc.json
-    checks:
-      indent:
-        enabled: false
   duplication:
     enabled: false
     config:
@@ -15,5 +7,7 @@ engines:
 ratings:
   paths:
   - "server/**/*.js"
+  - "client/**/*.js"
 exclude_paths:
   - "server/test/**/*"
+  - "client/test/**/*"
