chore(linting): reduce the length of long lines of code
[#145892003]

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "rm -rf lib/ && babel server -d lib/server && npm run build:client",
     "build:server": "rm -rf lib/ && babel server -d lib/server",
     "test": "NODE_ENV=test istanbul cover _mocha lib/server/test/**/*.js client/test/testSetup.js client/test/**/*.spec.js --timeout 20000",
-    "client:test": "_mocha --reporter spec testSetup.js client/test/**/*.spec.js",
+    "client:test": "_mocha --reporter spec client/test/testSetup.js client/test/**/*.spec.js",
+    "client:test:watch": "npm run client:test -- --watch",
     "db:migrate": "sequelize db:migrate:undo:all && sequelize db:migrate",
     "db:seed": "sequelize db:seed:all",
     "db:migrate:test": "NODE_ENV=test sequelize db:migrate:undo:all && NODE_ENV=test sequelize db:migrate",
