--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "db:migrate:test": "NODE_ENV=test sequelize db:migrate:undo:all && NODE_ENV=test sequelize db:migrate",
     "setup:test": "npm run db:migrate:test && NODE_ENV=test sequelize db:seed:all",
     "build:client": "NODE_ENV=production webpack --config webpack.config.prod.js && cat client/index.html > lib/client/index.html",
-    "postinstall": "npm run build && npm run db:migrate && npm run db:seed"
+    "postinstall": "npm run build && npm run db:migrate && npm run db:seed",
+    "e2e-setup": "selenium-standalone install",
+    "e2e-test": "nightwatch"
   },
   "repository": {
     "type": "git",
@@ -104,6 +106,8 @@
     "redux-mock-store": "1.0.2",
     "sass-loader": "^6.0.5",
     "style-loader": "0.13.1",
-    "url-loader": "0.5.7"
+    "url-loader": "0.5.7",
+    "nightwatch": "0.9.9",
+    "selenium-standalone": "5.9.0"
   }
 }
