--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "istanbul": "^0.4.5",
-    "jsdom": "8.5.0",
+    "jsdom": "^9.12.0",
     "json-loader": "^0.5.4",
     "mocha": "^3.3.0",
     "nightwatch": "0.9.9",
