--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,9 @@
   "env": {
     "development": {
       "presets": ["react-hmre"]
+    },
+    "test": {
+      "plugins": ["istanbul"]
     }
   }
 }
