--- a/package.json
+++ b/package.json
@@ -8,19 +8,36 @@
     "start:dev": "NODE_ENV=development nodemon --watch lib/server lib/server/index.js",
     "dev": "npm-run-all --parallel build:watch start:dev",
     "build:watch": "babel --watch server -d lib/server",
-    "build": "rm -rf lib/ && babel server -d lib/server && npm run build:client",
+    "build": "rm -rf lib/server && babel server -d lib/server && npm run build:client",
     "build:server": "rm -rf lib/ && babel server -d lib/server",
-    "test": "NODE_ENV=test istanbul cover _mocha lib/server/test/**/*.js client/test/testSetup.js client/test/**/* --timeout 20000",
-    "client:test": "_mocha --reporter spec client/test/testSetup.js client/test/**/*",
-    "client:test:watch": "npm run client:test -- --watch",
+    "build:client": "webpack --config webpack.config.prod.js && cat client/index.html > lib/client/index.html",
+    "test": "NODE_ENV=test nyc mocha server/test/**/*.js client/test/testSetup.js client/test/**/*.js --timeout 20000",
+    "test:server": "NODE_ENV=test nyc mocha server/test/**/*.js --timeout 20000",
+    "test:client": "NODE_ENV=test nyc mocha client/test/testSetup.js client/test/**/*.js",
+    "test:client:watch": "mocha client/test/testSetup.js client/test/**/*.js --watch",
     "db:migrate": "sequelize db:migrate:undo:all && sequelize db:migrate",
     "db:seed": "sequelize db:seed:all",
     "db:migrate:test": "NODE_ENV=test sequelize db:migrate:undo:all && NODE_ENV=test sequelize db:migrate",
     "setup:test": "npm run db:migrate:test && NODE_ENV=test sequelize db:seed:all",
-    "build:client": "NODE_ENV=production webpack --config webpack.config.prod.js && cat client/index.html > lib/client/index.html",
     "postinstall": "npm run build && npm run db:migrate && npm run db:seed",
     "e2e-setup": "selenium-standalone install",
     "e2e-test": "nightwatch"
+  },
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "reporter": [
+      "lcov",
+      "text",
+      "html"
+    ],
+    "sourceMap": false,
+    "instrument": false,
+    "exclude": [
+      "client/test",
+      "server/test"
+    ]
   },
   "repository": {
     "type": "git",
@@ -72,6 +89,7 @@
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
+    "babel-plugin-istanbul": "^4.1.3",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
@@ -94,7 +112,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "istanbul": "^0.4.5",
-    "jsdom": "^9.12.0",
+    "jsdom": "^8.5.0",
     "json-loader": "^0.5.4",
     "mocha": "^3.3.0",
     "nightwatch": "0.9.9",
@@ -102,6 +120,7 @@
     "node-sass": "^4.5.2",
     "nodemon": "1.10.2",
     "npm-run-all": "^4.0.2",
+    "nyc": "^10.3.2",
     "react-addons-test-utils": "15.0.2",
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-mock-store": "1.0.2",
