chore(server): properly name classes and encrypt password using sequelize hook
[#146144825]

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "build": "rm -rf lib/server && babel server -d lib/server && npm run build:client",
     "build:server": "rm -rf lib/ && babel server -d lib/server",
     "build:client": "webpack --config webpack.config.prod.js && cat client/index.html > lib/client/index.html",
-    "test": "NODE_ENV=test nyc mocha server/test/**/*.js client/test/testSetup.js client/test/**/*.js --timeout 20000",
+    "test": "NODE_ENV=test nyc mocha server/test/**/*.js client/test/testSetup.js client/test/**/* --timeout 20000",
     "test:server": "NODE_ENV=test nyc mocha server/test/**/*.js --timeout 20000",
-    "test:client": "NODE_ENV=test nyc mocha client/test/testSetup.js client/test/**/*.js",
+    "test:client": "NODE_ENV=test nyc mocha client/test/testSetup.js client/test/**/*",
     "test:client:watch": "mocha client/test/testSetup.js client/test/**/*.js --watch",
     "db:migrate": "sequelize db:migrate:undo:all && sequelize db:migrate",
     "db:seed": "sequelize db:seed:all",
