feature(server): add tests for middlewares and document API with slate
[#146144825]

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,9 +1,8 @@
-/node_modules/*
-lib/*
+/node_modules/**
+lib/**
 seeders/*
 server/test/*
 client/test/**
-client/static-frontend/*
 webpack.config.dev.js
 webpack.config.prod.js
 server/index.js
