--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dms",
+  "name": "doc-mage",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "build:watch": "babel --watch server -d lib/server",
     "build": "rm -rf lib/server && babel server -d lib/server && npm run build:client",
     "build:server": "rm -rf lib/ && babel server -d lib/server",
-    "build:client": "webpack --config webpack.config.prod.js && cat client/index.html > lib/client/index.html",
+    "build:client": "webpack --config webpack.config.prod.js && cat client/index.html > lib/client/index.html && cp -r api_docs lib/client",
     "test": "npm run setup:test && NODE_ENV=test nyc mocha server/test/**/*.js client/test/testSetup.js client/test/**/* --timeout 20000",
     "setup:test": "npm run db:migrate:test && NODE_ENV=test sequelize db:seed:all",
     "test:server": "npm run setup:test && NODE_ENV=test nyc mocha server/test/**/*.js --timeout 20000",
@@ -107,6 +107,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "events": "^1.1.1",
     "eventsource-polyfill": "0.9.6",
     "expect": "1.19.0",
     "extract-text-webpack-plugin": "1.0.1",
@@ -117,6 +118,7 @@
     "mocha": "^3.3.0",
     "nightwatch": "0.9.9",
     "nock": "8.0.0",
+    "node-mocks-http": "^1.6.2",
     "node-sass": "^4.5.2",
     "nodemon": "1.10.2",
     "npm-run-all": "^4.0.2",
