feature(client): remove role selection during signup and update client actions and components based on feedback
[#146144825]

--- a/package.json
+++ b/package.json
@@ -116,8 +116,8 @@
     "jsdom": "^8.5.0",
     "json-loader": "^0.5.4",
     "mocha": "^3.3.0",
+    "moxios": "^0.4.0",
     "nightwatch": "0.9.9",
-    "nock": "8.0.0",
     "node-mocks-http": "^1.6.2",
     "node-sass": "^4.5.2",
     "nodemon": "1.10.2",
