--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
     }],
     "import/no-dynamic-require": 0,
     "import/no-unresolved": 0,
+    "class-methods-use-this": 0,
     "no-script-url": 0,
     "jsx-quotes": 1,
     "jsx-a11y/label-has-for": 0,
