--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "redux-mock-store": "1.0.2",
     "sass-loader": "^6.0.5",
     "selenium-standalone": "5.9.0",
+    "sinon": "^2.3.2",
     "style-loader": "0.13.1",
     "url-loader": "^0.5.7"
   }
