--- a/package.json
+++ b/package.json
@@ -52,14 +52,10 @@
   "homepage": "https://github.com/andela-angene/document-management-system#readme",
   "dependencies": {
     "axios": "^0.16.1",
-    "babel-cli": "^6.24.1",
-    "babel-polyfill": "6.8.0",
-    "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "compression": "1.6.1",
     "dotenv": "^4.0.0",
-    "eslint": "^3.19.0",
     "express": "^4.15.2",
     "faker": "^4.1.0",
     "html-truncate": "^1.2.2",
@@ -82,36 +78,39 @@
     "validator": "^7.0.0",
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.10.0"
-  },
-  "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
+    "webpack-hot-middleware": "2.10.0",
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
     "babel-plugin-istanbul": "^4.1.3",
     "babel-plugin-react-display-name": "2.0.0",
+    "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.8.0",
+    "autoprefixer-loader": "^3.2.0",
+    "css-loader": "0.23.1",
+    "eventsource-polyfill": "0.9.6",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.5",
+    "style-loader": "0.13.1",
+    "url-loader": "^0.5.7",
+    "eslint": "^3.19.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "cheerio": "0.22.0",
     "coveralls": "^2.13.1",
     "cross-env": "1.0.7",
-    "css-loader": "0.23.1",
     "enzyme": "2.2.0",
-    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "events": "^1.1.1",
-    "eventsource-polyfill": "0.9.6",
     "expect": "1.19.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.8.5",
     "istanbul": "^0.4.5",
     "jsdom": "^8.5.0",
     "json-loader": "^0.5.4",
@@ -119,17 +118,16 @@
     "moxios": "^0.4.0",
     "nightwatch": "0.9.9",
     "node-mocks-http": "^1.6.2",
-    "node-sass": "^4.5.2",
     "nodemon": "1.10.2",
     "npm-run-all": "^4.0.2",
     "nyc": "^10.3.2",
     "react-addons-test-utils": "15.0.2",
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-mock-store": "1.0.2",
-    "sass-loader": "^6.0.5",
     "selenium-standalone": "5.9.0",
-    "sinon": "^2.3.2",
-    "style-loader": "0.13.1",
-    "url-loader": "^0.5.7"
+    "sinon": "^2.3.2"
+  },
+  "devDependencies": {
+
   }
 }
